--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -18,6 +18,7 @@ body{
 }
 nav{
   box-shadow: 1px 1px 15px rgba(220, 221, 223, 0.459);
+
 }
 .request-button {
   color: var(--White);
@@ -26,5 +27,88 @@ nav{
   border-radius: 25px;
   padding: 10px 30px;
   background: linear-gradient(200deg, var(--Green), var(--Cyan));
+
+}
+.request-button:hover {
+opacity: 0.7;
+color: var(--White) ;
+}
+.section1{
+  box-shadow: 1px 1px 15px rgba(220, 221, 223, 0.459);
+  height: 85vb;
+}
+.col1 {
+  text-align: center;
+  padding: 10em;
+   padding: 10%;
+}
+.col1 h1 {
+ font-size: 3em;
+ 
+}
+.col1 p {
+ text-align: left;
+ font-size: 0.9em;
+ color: var(--Gray600);
+ width: 340px;
+ margin-left: 3.8em;
+ margin-top: 1.5em;
+ line-height: 1.7em;
+}
+.col1-button{
+  text-align: left;
+   margin-left: 3.5em;
+}
+/* src="images/bg-intro-desktop.svg" */
+.col2-img1{
+  right: 4em;
+position: relative;
+top: -18.5em;
+z-index: -999;
+}
+.col2-img2{
+position: relative;
+top: -75em;
+right: -7em;
+}
+@media (min-width:300px) and (max-width:1440px) {
+  .section1 {
+    height: 90vb;
+
+  }
+
+  .col2 {
+    height: 40vb;
+
+  }
+
+  .col2-img1 {
+    right: 10em;
+
+    top: -31em;
+
+  }
+
+  .col2-img2 {
+    width: 370px;
+    top: -73em;
+    right: -0.8em;
+
+  }
+   .col1 p{
+    text-align: center;
+    line-height: 1.5em;
+  width: 330px;
+      margin: 16px 0;
+     
+  }
+     .col1 h1{
+  font-size: 2.6em;
+     
+  }
+  .col1-button {
+     text-align: center;
+    margin: 0;
+  }
 
 }
