--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -15,6 +15,8 @@
 
 body{
   font-family: 'Public Sans', sans-serif;
+  
+
 }
 nav{
   box-shadow: 1px 1px 15px rgba(220, 221, 223, 0.459);
@@ -33,14 +35,43 @@ nav{
 opacity: 0.7;
 color: var(--White) ;
 }
-.section1{
+.section1,.section2{
   box-shadow: 1px 1px 15px rgba(220, 221, 223, 0.459);
   height: 85vb;
+ width: 98.2vw;
+
 }
+/* start of section 2 */
+.section2{
+  background-color: var(--Gray100);
+  padding: 6% 1em;
+   height: auto;
+   width: 100%;
+}
+.section2 .div1 p{
+  margin-top: 20px;
+  width: 600px;
+  color: var(--Gray600);
+} 
+.sec2-col{
+  margin-top: 5%;
+}
+.sec2-col img{
+margin-bottom: 30px;
+}
+.sec2-col h4{
+ margin-bottom: 30px;
+}
+.sec2-col p{
+color: var(--Gray600);
+width: 250px;
+line-height: 1.5em;
+}
+
+/* end of section 2 */
 .col1 {
   text-align: center;
-  padding: 10em;
-   padding: 10%;
+  padding: 10%;
 }
 .col1 h1 {
  font-size: 3em;
@@ -70,23 +101,22 @@ z-index: -999;
 position: relative;
 top: -75em;
 right: -7em;
+z-index: 999;
 }
+
+
+
 @media (min-width:300px) and (max-width:1440px) {
   .section1 {
     height: 90vb;
-
   }
-
   .col2 {
     height: 40vb;
-
+   
   }
-
   .col2-img1 {
     right: 10em;
-
     top: -31em;
-
   }
 
   .col2-img2 {
@@ -98,17 +128,37 @@ right: -7em;
    .col1 p{
     text-align: center;
     line-height: 1.5em;
-  width: 330px;
-      margin: 16px 0;
+    width: 330px;
+     margin: 16px 0;
      
   }
-     .col1 h1{
+  .col1 h1{
   font-size: 2.6em;
      
   }
   .col1-button {
-     text-align: center;
+    text-align: center;
     margin: 0;
   }
 
+
+  .section2 .col-12 p{
+  width: auto;
+  font-size: 0.91em;
+}
+
+.section2 .row{
+  text-align: center;
+  justify-content: center  !important;
+
+}
+
+.section2 .div1 p{
+  width: auto;
+} 
+.section2 .div1 {
+  text-align: center;
+  
+ 
+} 
 }
