--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -48,6 +48,21 @@ color: var(--White) ;
    height: auto;
    width: 100%;
 }
+.section3{
+  padding: 6% 1em;
+  width: 100%;
+  height: auto;
+}
+ .auther{
+  font-size: 0.8em;
+ }
+ .card img{
+  margin-bottom: 16px !important;
+ }
+ .card{
+    box-shadow: 1px 1px 15px rgba(220, 221, 223, 0.459);
+    border: none;
+ }
 .section2 .div1 p{
   margin-top: 20px;
   width: 600px;
@@ -147,18 +162,22 @@ z-index: 999;
   font-size: 0.91em;
 }
 
-.section2 .row{
+.section2 .row ,.section3 {
   text-align: center;
   justify-content: center  !important;
 
 }
+
+  .section3 .card {
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 .section2 .div1 p{
   width: auto;
 } 
 .section2 .div1 {
   text-align: center;
-  
  
 } 
 }
